--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "gatsby-plugin-sitemap": "^2.2.22",
     "gatsby-plugin-theme-ui": "^0.2.43",
     "gatsby-remark-copy-linked-files": "^2.1.31",
-    "gatsby-remark-images": "^3.1.34",
+    "gatsby-remark-images": "3.1.34",
     "gatsby-remark-smartypants": "^2.1.17",
     "gatsby-source-filesystem": "^2.1.39",
     "gatsby-transformer-sharp": "^2.3.6",
