--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby-plugin-mdx": "^1.0.58",
     "gatsby-plugin-offline": "^3.0.21",
     "gatsby-plugin-page-creator": "^2.1.30",
+    "gatsby-plugin-parent-resolvers": "^1.0.0",
     "gatsby-plugin-react-helmet": "^3.1.16",
     "gatsby-plugin-robots-txt": "^1.5.0",
     "gatsby-plugin-sharp": "^2.3.4",
