--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-icons": "^3.8.0",
     "react-scroll": "^1.7.14",
     "remark-slug": "^5.1.2",
+    "gatsby-interface-content-pages": "^1.0.0",
     "theme-ui": "^0.2.49"
   },
   "devDependencies": {
