--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-scroll": "^1.7.14",
     "remark-slug": "^5.1.2",
     "gatsby-interface-content-pages": "^1.0.0",
+    "gatsby-transformer-mdx-content-pages": "^1.0.0",
     "theme-ui": "^0.2.49"
   },
   "devDependencies": {
