--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@theme-ui/presets": "^0.2.44",
     "deepmerge": "^4.2.2",
     "gatsby-image": "^2.2.34",
+    "gatsby-plugin-create-content-pages": "^1.0.0",
     "gatsby-plugin-manifest": "^2.2.30",
     "gatsby-plugin-mdx": "^1.0.58",
     "gatsby-plugin-offline": "^3.0.21",
