--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "version": "0.6.0",
   "author": "RMP <rogermparent@gmail.com>",
   "dependencies": {
+    "@arrempee/gatsby-plugin-collections": "^2.0.0",
+    "@arrempee/gatsby-plugin-taxonomies": "^2.0.0",
     "@emotion/core": "^10.0.22",
     "@mdx-js/mdx": "^1.5.1",
     "@mdx-js/react": "^1.5.1",
@@ -12,7 +14,8 @@
     "@theme-ui/presets": "^0.2.44",
     "deepmerge": "^4.2.2",
     "gatsby-image": "^2.2.34",
-    "gatsby-interface-content-pages": "^1.0.0",
+    "gatsby-interface-content-pages": "^1.1.0",
+    "gatsby-interface-mdx-content-pages": "^1.0.0",
     "gatsby-plugin-create-content-pages": "^1.0.0",
     "gatsby-plugin-manifest": "^2.2.30",
     "gatsby-plugin-mdx": "^1.0.58",
@@ -29,7 +32,7 @@
     "gatsby-remark-images": "^3.1.38",
     "gatsby-remark-smartypants": "^2.1.17",
     "gatsby-source-filesystem": "^2.1.39",
-    "gatsby-transformer-mdx-content-pages": "^1.0.0",
+    "gatsby-transformer-mdx-content-pages": "^1.0.2",
     "gatsby-transformer-sharp": "^2.3.6",
     "gatsby-transformer-yaml": "^2.2.18",
     "prop-types": "^15.7.2",
