--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@mdx-js/react": "^1.5.1",
     "@theme-ui/color": "^0.2.49",
     "@theme-ui/components": "^0.2.49",
-    "@theme-ui/presets": "^0.2.44",
+    "@theme-ui/preset-tailwind": "^0.2.42",
     "deepmerge": "^4.2.2",
     "gatsby-image": "^2.2.34",
     "gatsby-interface-content-pages": "^1.1.0",
